Local navigation block: Fix spacing around navigation menu
Fixes #460

--- a/mu-plugins/blocks/local-navigation-bar/postcss/style.pcss
+++ b/mu-plugins/blocks/local-navigation-bar/postcss/style.pcss
@@ -61,6 +61,10 @@
 		/* Adjust the modal container so the close button is not hidden by the global header when open. */
 		@media (max-width: 599px) {
 			top: var(--wp-global-header-height);
+			padding-right: var(--wp--preset--spacing--edge-space) !important;
+			padding-left: var(--wp--preset--spacing--edge-space) !important;
+			padding-top: 21px !important;
+			padding-bottom: 18px !important;
 		}
 	}
 
